// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Marker renders Add New Marker Form 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={true}
>
  <RCTSafeAreaView
    style={
      Object {
        "backgroundColor": "#C2E098",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "maxHeight": "5%",
            "paddingHorizontal": 20,
            "top": 0,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#C2E098",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="menuButton"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#171914",
                "fontSize": 25,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 22,
            "fontWeight": "bold",
            "marginLeft": "22%",
            "zIndex": 1000,
          }
        }
        testID="apptitle"
      >
        Add Marker
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 20,
          "marginTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Title
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="words"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Description
        </Text>
        <TextInput
          allowFontScaling={true}
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Latitude
        </Text>
        <TextInput
          allowFontScaling={true}
          keyboardType="numeric"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Longitude
        </Text>
        <TextInput
          allowFontScaling={true}
          keyboardType="numeric"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View>
        <View
          accessibilityRole="button"
          accessibilityStates={
            Array [
              "disabled",
            ]
          }
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              disabled={true}
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "padding": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#BF41BA",
                  },
                  Object {
                    "color": "#cdcdcd",
                  },
                ]
              }
            >
              Add
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</Modal>
`;

exports[`Add Marker renders Update New Marker Form 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={true}
>
  <RCTSafeAreaView
    style={
      Object {
        "backgroundColor": "#C2E098",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "maxHeight": "5%",
            "paddingHorizontal": 20,
            "top": 0,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#C2E098",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="menuButton"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#171914",
                "fontSize": 25,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 22,
            "fontWeight": "bold",
            "marginLeft": "22%",
            "zIndex": 1000,
          }
        }
        testID="apptitle"
      >
        Add Marker
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 20,
          "marginTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Title
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="words"
          defaultValue="Central Park"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
          value="Central Park"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Description
        </Text>
        <TextInput
          allowFontScaling={true}
          defaultValue="Central Park playground update"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
          value="Central Park playground update"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Latitude
        </Text>
        <TextInput
          allowFontScaling={true}
          defaultValue="40.785091"
          keyboardType="numeric"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
          value="40.785091"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#171914",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 5,
            }
          }
        >
          Longitude
        </Text>
        <TextInput
          allowFontScaling={true}
          defaultValue="-73.968285"
          keyboardType="numeric"
          onChangeText={[Function]}
          style={
            Object {
              "borderColor": "#88BF41",
              "borderWidth": 1,
              "height": 40,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
          value="-73.968285"
        />
      </View>
      <View>
        <View
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              disabled={false}
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "padding": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#BF41BA",
                  },
                ]
              }
            >
              Update
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</Modal>
`;
